<resources>
    <string name="app_name">TODO</string>
    <string name="enter_note">Enter note:</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="choose_priority_for_your_note">Choose priority for your note:</string>
    <string name="add_note">Add note</string>
    <string name="your_notes">Your notes:</string>
</resources>